--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,2 +1,42 @@
-<p>login works!</p>
-<button (click)="authService.login('name', 'password')">login</button>
+<div class="d-flex login">
+  <div class="w-50 left d-flex justify-content-center align-items-center">
+    <div class="px-5">
+      <h1>Azərbaycan Respublikasının Fövqəladə Hallar Nazirliyi</h1>
+      <p>
+        Azərbaycan Respublikasının ərazisində fəaliyyətdə olan Təhlükə
+        Potensiallı Obyektlərin Dövlət Reyestri
+      </p>
+    </div>
+  </div>
+  <div class="w-50 right d-flex justify-content-center align-items-center">
+    <div class="w-50">
+      <h2 class="pb-3">Giriş</h2>
+      <form class="w-100 login-form d-flex flex-column" [formGroup]="loginForm">
+        <span class="p-input-icon-left">
+          <i class="fa-regular fa-envelope"></i>
+          <input
+            type="email"
+            pInputText
+            placeholder="İstifadəçi adı"
+            formControlName="email"
+          />
+        </span>
+        <br />
+        <span class="p-input-icon-left">
+          <i class="fa-solid fa-lock"></i>
+          <input
+            type="text"
+            pInputText
+            placeholder="Şifrə"
+            formControlName="password"
+          />
+        </span>
+        <br />
+        <p-button
+          label="Daxil ol"
+          (click)="authService.login('name', 'password')"
+        ></p-button>
+      </form>
+    </div>
+  </div>
+</div>
