--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/variables.scss";
+
 .login {
   height: 100%;
 }
@@ -8,27 +10,26 @@
   background-repeat: no-repeat;
   background-size: cover;
   h1 {
-    font-size: 50px;
+    font-size: 2.5vw;
     font-family: "Poppins", sans-serif;
     font-weight: 900;
     font-style: normal;
-    line-height: 60px !important;
+    line-height: 3vw !important;
     letter-spacing: 2px;
   }
   p {
-    font-size: 16px;
+    font-size: 0.8vw;
     font-family: "Poppins", sans-serif;
   }
 }
 
 .right {
-  width: 50%;
   h2 {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 900;
     font-style: normal;
-    color: #464255;
+    color: $title-color;
     text-align: center;
   }
   .login-form {
@@ -44,14 +45,25 @@
     ::ng-deep .p-button {
       color: white;
       border-radius: 6px;
-      font-weight: 400px!important;
+      font-weight: 400px !important;
     }
     //Input placeholder
     input::placeholder,
     ::ng-deep .p-password-input::placeholder {
-      color: gray;
-      font-size: 14px; 
-      font-family: "Poppins", sans-serif!important;
+      color: $placeholder-color;
+      font-size: 14px;
+      font-family: "Poppins", sans-serif !important;
     }
+  }
+  .forgotPass {
+    color: $title-color;
+    font-size: 14px;
+    font-family: "Poppins", sans-serif !important;
+    text-decoration: none;
+    font-weight: 400;
+  }
+  .forgotPass:hover {
+    color: $main-color;
+    text-decoration: underline;
   }
 }
