--- a/src/app/cabinet/components/main/main.component.html
+++ b/src/app/cabinet/components/main/main.component.html
@@ -1,4 +1,90 @@
-<p>main works!</p>
-
-
+<div class="main">
+  <h1 class="title py-3 px-3">Ana səhifə</h1>
+  <div class="container-fluid p-0 m-0">
+    <div class="row w-100 p-0 m-0">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="d-flex align-items-center justify-content-between square-box mb-2">
+          <div class="flex-fill">
+            <p>Lorem ipsum dolor elit</p>
+            <h3>10 000</h3>
+          </div>
+          <div class="flex-fill d-flex justify-content-end icon">
+            <div>
+              <i class="fa-solid fa-chart-simple"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="d-flex align-items-center justify-content-between square-box mb-2">
+          <div class="flex-fill">
+            <p>Lorem ipsum dolor elit</p>
+            <h3>100 000</h3>
+          </div>
+          <div class="flex-fill d-flex justify-content-end icon">
+            <div>
+              <i class="fa-solid fa-chart-simple"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="d-flex align-items-center justify-content-between square-box mb-2">
+          <div class="flex-fill">
+            <p>Lorem ipsum dolor elit</p>
+            <h3>60 000</h3>
+          </div>
+          <div class="flex-fill d-flex justify-content-end icon">
+            <div>
+              <i class="fa-solid fa-chart-simple"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="d-flex align-items-center justify-content-between square-box">
+          <div class="flex-fill p-0 m-0">
+            <p>Lorem ipsum dolor elit</p>
+            <h3>30 000</h3>
+          </div>
+          <div class="flex-fill d-flex justify-content-end icon">
+            <div>
+              <i class="fa-solid fa-chart-simple"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container-fluid charts px-4 pt-5 pb-2 gap-3">
+    <div class="row">
+      <div class="col-lg-8 col-md-12 col-sm-12 col-12 ps-1">
+        <h3>Təhlükə potensiallı obyektlərin günlük statistikası</h3>
+        <div class="card">
+          <p-chart
+            type="bar"
+            [data]="data2"
+            [options]="options2"
+            width="100%"
+            height="50vh"
+          ></p-chart>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+        <h3>TPO ümumi statistikası</h3>
+        <div class="card">
+          <p-chart
+            type="doughnut"
+            [data]="data"
+            [options]="options"
+            width="100%"
+            height="50vh"
+          ></p-chart>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
