--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -12,6 +12,7 @@
   height: 100%;
   font-family: "Poppins", sans-serif;
   border: none;
+  overflow-y: auto;
   .logo {
     h5 {
       text-align: center;
@@ -60,6 +61,7 @@
   }
   .dropdown {
     padding-left: 53px;
+    display: block;
     li {
       font-size: 14px;
       padding: 6px 0px;
@@ -96,10 +98,17 @@
     box-shadow: none;
     border-radius: 8px;
   }
-  ::ng-deep .mat-expansion-panel-header-title{
+  ::ng-deep .mat-expansion-panel-header-title {
     font-size: 15px;
     font-weight: 400;
     font-family: "Poppins", sans-serif;
+    display: block;
+    .title p {
+      padding-top: 11px;
+      font-size: 15px !important;
+      font-weight: 400;
+      font-family: "Poppins", sans-serif;
+    }
   }
   ::ng-deep .mat-expansion-panel:hover {
     background-color: $sidebar-hover;
@@ -144,16 +153,18 @@
     .line {
       visibility: visible;
     }
-    ::ng-deep .mat-expansion-panel-header-title {
-      color: $main-color;
-      font-weight: bold;
+    ::ng-deep .mat-expansion-panel-header {
+      .title p {
+        color: $main-color;
+        font-weight: bold;
+      }
     }
     // .mat-expansion-panel:not([class*="mat-elevation-z"]) {
     //   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     // }
   }
   .router-link-activeLi {
-      color: $main-color;
+    color: $main-color;
   }
   .collapse {
     ul {
@@ -185,6 +196,7 @@
   height: 100%;
   font-family: "Poppins", sans-serif;
   border: none;
+  overflow-y: auto;
   ul li {
     border-radius: 8px;
     transition: border-radius 200ms;
@@ -247,6 +259,9 @@
     box-shadow: none;
     border-radius: 8px;
   }
+  ::ng-deep .mat-expansion-panel-header .title {
+    display: none!important;
+  }
   ::ng-deep .mat-expansion-panel:hover {
     background-color: $sidebar-hover;
     ::ng-deep .mat-expansion-panel-header-title {
@@ -262,6 +277,9 @@
         display: none;
       }
     }
+  }
+  .dropdown {
+    display: none;
   }
   .router-link-active {
     font-weight: bold !important;
@@ -293,10 +311,10 @@
     .line {
       visibility: visible;
     }
-    ::ng-deep .mat-expansion-panel-header-title {
-      color: $main-color;
-      font-weight: bold;
+    .title p {
+      display: none;
     }
+
     // .mat-expansion-panel:not([class*="mat-elevation-z"]) {
     //   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     // }
@@ -313,4 +331,12 @@
   .collapse {
     transition: height 0.5s ease; /* Adjust the duration and timing function as needed */
   }
+  ::ng-deep .mat-expansion-indicator {
+    display: none;
+  }
+  ::ng-deep .mat-content.mat-content-hide-toggle{
+    margin: 0px!important;
+    padding: 0px!important;
+  }
 }
+
