--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,71 +1,164 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #F3F2F7; }
-
+@import "styles/variables.scss";
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: #f3f2f7;
+}
 
 .poppins-thin {
-    font-family: "Poppins", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .poppins-extralight {
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-  }
-  
-  .poppins-light {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .poppins-medium {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .poppins-semibold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  .poppins-bold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .poppins-extrabold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-  }
-  
-  .poppins-black {
-    font-family: "Poppins", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
 
-  .validationMessage{
-    color: red;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.validationMessage {
+  color: red;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.p-tooltip .p-tooltip-text {
+  width: max-content;
+  max-width: 400px;
+  background: $main-color;
+  opacity: 0.9;
+  color: #ffffff;
+  padding: 0.75rem 0.75rem;
+  box-shadow: 0 2px 12px 0 rgba(5, 153, 204, 0.1);
+  border-radius: 6px;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+}
+.p-tooltip.p-tooltip-right .p-tooltip-arrow {
+  border-right-color: $main-color;
+  opacity: 0.9;
+}
+.p-tooltip.p-tooltip-left .p-tooltip-arrow {
+  border-left-color: $main-color;
+  opacity: 0.9;
+}
+.p-tooltip.p-tooltip-top .p-tooltip-arrow {
+  border-top-color: $main-color;
+  opacity: 0.9;
+}
+.p-tooltip.p-tooltip-bottom .p-tooltip-arrow {
+  border-bottom-color: $main-color;
+  opacity: 0.9;
+}
+
+/*Scroll style start*/
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $main-color;
+  border-radius: 6px;
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+/*Scroll style end*/
+
+mat-table.material-table {
+  font-family: "Poppins", sans-serif;
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11" !important;
+  mat-row {
+    min-height: unset !important;
+    border-bottom: 1px solid #e5e7eb !important;
+    mat-cell {
+      border-bottom: none !important;
+      padding: 0.5rem !important;
+      min-height: unset !important;
+      font-family: "Poppins", sans-serif;
+      font-feature-settings: "cv02", "cv03", "cv04", "cv11" !important;
+      font-size: 13px !important;
+      line-height: 20px !important;
+    }
+    &:nth-child(odd) {
+      background-color: #f8f8fa !important;
+    }
   }
-  
-  
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  mat-header-row {
+    min-height: unset !important;
+    mat-header-cell {
+      border-bottom: none !important;
+      background-color: $table-header !important;
+      font-size: 13px !important;
+      padding: 0.6rem !important;
+      text-align: left !important;
+      font-weight: 700 !important;
+      color: white !important;
+      line-height: 20px !important;
+      &:first-child {
+        border-top-left-radius: 10px !important;
+      }
+      &:last-child {
+        border-top-right-radius: 10px;
+      }
+    }
+  }
+}
+
+.edit-icon {
+  color: $main-color;
+  cursor: pointer;
+}
+.delete-icon {
+  color: red;
+  cursor: pointer;
+}
