--- a/src/app/cabinet/components/legal-individual-person/legal-individual-person.component.html
+++ b/src/app/cabinet/components/legal-individual-person/legal-individual-person.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between">
     <div><h1 class="pt-3">Fiziki/Hüquqi şəxslər</h1></div>
     <div class="d-flex align-items-center">
-      <p-button label="Əlavə et" icon="fa-solid fa-plus" />
+      <p-button label="Əlavə et" icon="fa-solid fa-plus" routerLink="/new-individual-person" />
     </div>
   </div>
 
