--- a/src/app/cabinet/cabinet.component.scss
+++ b/src/app/cabinet/cabinet.component.scss
@@ -1,41 +1,45 @@
 .main-content {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   gap: 10px;
 }
+
 .content {
+  display: flex;
+  flex: 1; 
   gap: 10px;
+  overflow: hidden;
 }
+
 .content-wrapper {
-  overflow-y: none;
+  display: flex;
+  flex-direction: column;
+  flex: 1; 
+  overflow: hidden; 
 }
+
 .chg-content {
+  flex: 1; 
+  overflow-y: auto; 
   z-index: 2;
-  height: calc(100vh - 146px);
   border-radius: 10px;
   background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  overflow-y: none;
+  padding: 15px; 
 }
-::ng-deep .chg-content > :nth-child(2) {
-  display: flex;
-  flex-direction: column;
+
+.left-side1, .left-side2 {
   width: 100%;
-  height: 100%;
-  padding: 15px;
-  font-family: "Helvetica", sans-serif;
+  gap: 10px;
+  padding: 0 10px;
+  transition: margin-left 300ms;
 }
+
 .left-side1 {
-  width: 100%;
-  gap: 10px;
   margin-left: 340px;
-  padding: 0 10px;
-  transition: margin-left 300ms;
-  overflow-y: none !important;
 }
+
 .left-side2 {
-  width: 100%;
-  gap: 10px;
-  padding: 0 10px;
   margin-left: 100px;
-  transition: margin-left 300ms;
-  overflow-y: none !important;
 }
