--- a/src/app/cabinet/components/new-individual-person/new-individual-person.component.scss
+++ b/src/app/cabinet/components/new-individual-person/new-individual-person.component.scss
@@ -1,42 +1,50 @@
 @import "../../../../styles/variables.scss";
 .new-individual-person {
+  font-family: "Poppins", sans-serif !important;
   h1 {
     font-size: 30px;
     font-weight: bold;
     font-family: "Poppins", sans-serif;
     color: $title-color;
   }
-  ::ng-deep .p-inputtext{
+  ::ng-deep .p-inputtext {
     width: 100%;
   }
-  label{
+  label {
     font-family: "Poppins", sans-serif;
     padding: 5px 0px;
-   }
-  ::ng-deep .p-element .p-inputwrapper{
-    width: 100%!important;
-    font-size: 12px;
-    font-family: "Poppins", sans-serif;
-    ul{
-        padding: 0px!important;
-        margin: 0px!important;
+  }
+  ::ng-deep .p-element .p-inputwrapper,
+  ::ng-deep .p-calendar,
+  ::ng-deep .p-dropdown-label {
+    width: 100% !important;
+    font-size: 14px !important;
+    font-family: "Poppins", sans-serif !important;
+    ul {
+      padding: 0px !important;
+      margin: 0px !important;
     }
   }
 
-  .add-btn{
-    background-color: transparent!important;
-    color: $main-color!important;
-    border: 1px solid $main-color!important;
-    border-radius: 8px!important;
+  .add-btn {
+    background-color: transparent !important;
+    color: $main-color !important;
+    border: 1px solid $main-color !important;
+    border-radius: 8px !important;
     padding: 6px 10px;
     font-size: 12px;
-}
-.rmv-btn{
-    background-color: transparent!important;
-    color: red!important;
-    border: 1px solid red!important;
-    border-radius: 8px!important;
+  }
+  .rmv-btn {
+    background-color: transparent !important;
+    color: red !important;
+    border: 1px solid red !important;
+    border-radius: 8px !important;
     padding: 6px 10px;
     font-size: 12px;
-}
+  }
+  .address_info {
+    border: 1px solid #E1EEFC;
+
+    border-radius:8px; 
+  }
 }
